# flashvnc

./: .gitignore  README.md
client/: Cargo.toml  Session.master.vim  atspi.py  benchmark.sh  build.rs  jpeg_interface.c  latest-vnc-screen.sh  screen-size.sh
client/src/: framebuffer.rs  lib.rs  main.rs  tight.rs
client/src/encoding/: decoding_master.rs  mod.rs
client/src/infrastructure/: bit_buffer.rs  mod.rs  mode_lock.rs  thread_pool.rs
client/src/presentation/: gtk.rs  menu.rs  mod.rs  sdl.rs  x11_keysyms.rs
client/src/protocol/: mod.rs  rfb.rs
client/src/protocol/parsing/: io_input.rs  mod.rs  packet.rs  parser_test.rs  primitive.rs  result.rs
client/tests/: acceptance_spec.rs  end_to_end_spec.rs
client/tests/benchmark/common/: end_to_end.rs
client/tests/bins/: benchmark.rs  manual_test.rs  mod.rs
client/tests/bins/common/: end_to_end.rs  mod.rs
