[package]
name = "flashvnc"
version = "0.1.0"
authors = ["Patrick Plagwitz <Patrick_Plagwitz@web.de>"]

[dependencies]
gtk = "*"
gdk = "*"
gdk-pixbuf = "*"
glib = "*"
# this a dependency of only server_test_program and listed here
# due to a limitation in Cargo
# TODO remove this
libc = "0.2"
# likewise for benchmark
# TODO remove this
tempdir = "0.3.5"

derivative = "*"

[dependencies.cairo-rs]
version = "*"
features = ["png"]

[dev-dependencies]
libc = "0.2"
spectral = "0.6.0"

[[bin]]
name = "server_test_program"
path = "src/bin/server_test_program.rs"
test = false

[[bin]]
name = "benchmark"
path = "tests/benchmark/benchmark.rs"
test = false

[[bin]]
name = "flashvnc"
path = "src/main.rs"
