[package]
name = "flashvnc"
version = "0.1.0"
authors = ["Patrick Plagwitz <Patrick_Plagwitz@web.de>"]
links = "jpeg"
build = "build.rs"

[dependencies]
gtk = "*"
gdk-pixbuf = "*"
glib = "*"
sdl2 = "*"
libc = "0.2"
# this a dependency of only benchmark and listed here
# due to a limitation in Cargo
# TODO remove this
tempdir = "0.3.5"

derivative = "*"

flate2 = { version = "0.2", features = ["zlib"], default-features = false }

[dependencies.cairo-rs]
version = "*"
features = ["png"]

[dependencies.gdk]
version = "*"
features = ["v3_20"]

[dev-dependencies]
libc = "0.2"
spectral = "0.6.0"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "server_test_program"
path = "src/bin/server_test_program.rs"
test = false

[[bin]]
name = "benchmark"
path = "tests/bins/benchmark.rs"
test = false

[[bin]]
name = "manual_test"
path = "tests/bins/manual_test.rs"
test = false

[[bin]]
name = "flashvnc"
path = "src/main.rs"
